@@ -1,7 +1,6 @@
 package org.folio.services.domainevent;
 
 import static io.vertx.core.Future.succeededFuture;
-import static java.util.stream.Collectors.toList;
 import static org.folio.InventoryKafkaTopic.HOLDINGS_RECORD;
 import static org.folio.rest.tools.utils.TenantTool.tenantId;
 
@@ -10,9 +9,11 @@ import io.vertx.core.Future;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.folio.persist.HoldingsRepository;
 import org.folio.rest.jaxrs.model.HoldingsRecord;
+import org.folio.rest.jaxrs.model.PublishReindexRecords;
 
 public class HoldingDomainEventPublisher
   extends AbstractDomainEventPublisher<HoldingsRecord, HoldingsRecord> {
@@ -23,13 +24,21 @@ public class HoldingDomainEventPublisher
         HOLDINGS_RECORD.fullTopicName(tenantId(okapiHeaders))));
   }
 
+  public Future<Void> publishReindexHoldings(String key, List<HoldingsRecord> holdings) {
+    if (StringUtils.isBlank(key)) {
+      return succeededFuture();
+    }
+
+    return domainEventService.publishReindexRecords(key, PublishReindexRecords.RecordType.HOLDINGS, holdings);
+  }
+
   @Override
   protected Future<List<Pair<String, HoldingsRecord>>> getRecordIds(
     Collection<HoldingsRecord> holdingsRecords) {
 
     return succeededFuture(holdingsRecords.stream()
       .map(hr -> pair(hr.getInstanceId(), hr))
-      .collect(toList()));
+      .toList());
   }
 
   @Override
